test/tests/packages/lets_forward/forward.txt
error: unknown variable
 --> <packages/fwdpkg/lets.tql>:1:10
  |
1 | let $a = $b
  |          ^^ 
  |
  = hint: no variables are available here
